--- a/CapstoneProject/build.gradle
+++ b/CapstoneProject/build.gradle
@@ -1,23 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
+        lifecycle_version = '2.4.0-alpha01'
         kotlin_version = "1.4.32"
         retrofit_version = '2.9.0'
         rxjava_version = '2.2.19'
         rxandroid_version = '2.1.1'
         rxbinding_version = '2.2.0'
-        lifecycle_version = '2.3.1'
-        hilt_version = '2.28-alpha'
-        hilt_jetpack_version = '1.0.0-alpha02'
+        coil_version = '1.2.1'
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.0"
+        classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'com.google.gms:google-services:4.3.8'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
